# ovmf-binaries

./: LICENSE  README.md  meson.build
.github/workflows/: ci.yml
